# ai-resume-builder

./: .gitignore  README.md  pyproject.toml
nb/: 01-retrival-augmented-generation.ipynb
