[tool.poetry]
name = "ai-resume-builder"
version = "0.1.0"
description = "Leverage Gen AI to modify resumes and highlight experiences based on job description."
authors = ["Zaaheda Islam <izaaheda99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.21.0"
ipykernel = "^6.29.2"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
pypdf = "^4.0.2"
chromadb = "^0.4.22"
docarray = "^0.40.0"
tiktoken = "^0.6.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
